# rust-5w-1h

./: LICENSE  README.md
1/code/: Cargo.toml  Shuttle.toml  justfile
20240229/code/: rust-toolchain.toml
20240229/code/src/: main.rs
