[package]
name = "launch"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
publish = false

[workspace]

[dependencies]
shuttle-runtime = "0.39"
tokio = "1.36"
tracing = "0.1"

actix-web = { version = "4.5", optional = true }
actix-files = { version = "0.6", optional = true }
shuttle-actix-web = { version = "0.39", optional = true }

axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
shuttle-axum = { version = "0.39", optional = true }

rocket = { version = "0.5", optional = true }
shuttle-rocket = { version = "0.39", optional = true }

[features]
default = ["axum"]

actix = ["dep:actix-web", "dep:actix-files", "dep:shuttle-actix-web"]
axum = ["dep:axum", "dep:tower-http", "dep:shuttle-axum"]
rocket = ["dep:rocket", "dep:shuttle-rocket"]
